--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "motion": "^12.23.26",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.12",
     "ogl": "^1.0.11",
     "react": "19.2.3",
     "react-dom": "19.2.3",
