--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
+    "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-use-measure": "^2.1.7",
