--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tsparticles/react": "^3.0.0",
@@ -24,6 +26,7 @@
     "motion": "^12.23.26",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.9.17",
     "nodemailer": "^7.0.12",
     "ogl": "^1.0.11",
     "razorpay": "^2.9.6",
