--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.26",
     "googleapis": "^170.0.0",
+    "jose": "^6.1.3",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
