feat: admin panel enhancements with mobile responsiveness, export feature, and internships redesign
- Add server-side API for admin plan editing with in_stock toggle
- Redesign internships page with duration toggle (3mo/6mo grouped cards)
- Add customer export to Excel/CSV with domain and type filters
- Implement mobile responsive admin sidebar with slide-in drawer
- Add Razorpay webhook handler for payment events
- Fix blog editor SSR hydration issues for Next.js 15+
- Update admin UI with premium glassmorphic styling
- Route internship emails to dedicated inbox
- Improve mobile accessibility with proper ARIA labels and touch targets

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "framer-motion": "^12.23.26",
     "googleapis": "^170.0.0",
     "jose": "^6.1.3",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
@@ -50,7 +52,8 @@
     "react-dom": "19.2.3",
     "react-use-measure": "^2.1.7",
     "recharts": "^3.6.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
