--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@tiptap/starter-kit": "^3.15.3",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
+    "@types/pg": "^8.16.0",
+    "argon2": "^0.44.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -47,11 +49,14 @@
     "nextjs-toploader": "^3.9.17",
     "nodemailer": "^7.0.12",
     "ogl": "^1.0.11",
+    "pdf-lib": "^1.17.1",
+    "pg": "^8.17.0",
     "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-use-measure": "^2.1.7",
     "recharts": "^3.6.0",
+    "resend": "^6.7.0",
     "schema-dts": "^1.1.5",
     "tailwind-merge": "^3.4.0",
     "xlsx": "^0.18.5"
