--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "resend": "^6.7.0",
     "schema-dts": "^1.1.5",
     "tailwind-merge": "^3.4.0",
+    "validator": "^13.15.26",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -68,6 +69,7 @@
     "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/validator": "^13.15.10",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
