refactor: migrate large assets (141MB) to Linode S3 CDN
- Move brochures, images, and backgrounds to S3 (zexc bucket)
- Public folder reduced from 141MB to 636KB (99.5% reduction)
- Add cdn.ts helper for CDN URL generation
- Update all page components to use CDN URLs
- Configure Next.js image domains for remote patterns
- Update send-email API to fetch brochures from CDN
- Add S3 migration script for future asset uploads
- Keep small assets (icons, logo) in repo for performance

CDN URL: https://zexc.in-maa-1.linodeobjects.com

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,14 @@ opencode.jsonc
 # mcp config
 .mcp.json
 nohup.out
+
+# Large assets (stored in Linode S3 CDN)
+/public/brochures/
+/public/assets/*.png
+/public/images/pages/
+/public/images/features/
+/public/images/*_diagram.png
+/public/images/flipper-zero*.png
+/public/images/dashboard-hero*.png
+/public/hero-bg.png
+/public/logo_new.png
