--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
     "lenis": "^1.3.17",
+    "lru-cache": "^11.2.4",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
     "next": "16.1.1",
