--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "lru-cache": "^11.2.4",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
-    "next": "16.1.1",
+    "next": "^15.5.9",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
     "nodemailer": "^7.0.12",
