--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "^50.15.1"
   }
 }
