--- a/package.json
+++ b/package.json
@@ -11,52 +11,36 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.970.0",
     "@aws-sdk/s3-request-presigner": "^3.985.0",
+    "@googleapis/sheets": "^13.0.1",
     "@hookform/resolvers": "^5.2.2",
-    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-tabs": "^1.1.13",
-    "@tailwindcss/typography": "^0.5.19",
     "@tiptap/extension-image": "^3.15.3",
     "@tiptap/extension-link": "^3.15.3",
     "@tiptap/extension-placeholder": "^3.15.3",
     "@tiptap/extension-text-align": "^3.15.3",
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.9.1",
-    "@types/pg": "^8.16.0",
     "@upstash/ratelimit": "^2.0.8",
     "@upstash/redis": "^1.36.1",
     "argon2": "^0.44.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv": "^17.2.3",
-    "embla-carousel-auto-scroll": "^8.6.0",
-    "embla-carousel-react": "^8.6.0",
     "exceljs": "^4.4.0",
     "framer-motion": "^12.23.26",
-    "googleapis": "^170.0.0",
     "jose": "^6.1.3",
-    "jspdf": "^4.0.0",
-    "jspdf-autotable": "^5.0.7",
     "lenis": "^1.3.17",
-    "lru-cache": "^11.2.4",
     "lucide-react": "^0.562.0",
-    "motion": "^12.23.26",
     "next": "^15.5.9",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
-    "nodemailer": "^7.0.12",
-    "ogl": "^1.0.11",
+    "node-gyp": "^12.2.0",
     "pdf-lib": "^1.17.1",
     "pg": "^8.17.1",
     "razorpay": "^2.9.6",
@@ -64,9 +48,9 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-use-measure": "^2.1.7",
-    "recharts": "^3.6.0",
     "resend": "^6.7.0",
     "schema-dts": "^1.1.5",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "validator": "^13.15.26",
     "zod": "^4.3.5"
@@ -75,14 +59,14 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
-    "@types/nodemailer": "^7.0.4",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/validator": "^13.15.10",
+    "dotenv": "^17.3.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "vercel": "^50.15.1"
   }
