--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.970.0",
-    "@aws-sdk/s3-request-presigner": "^3.985.0",
+    "@aws-sdk/client-ses": "^3.992.0",
+    "@aws-sdk/s3-request-presigner": "^3.992.0",
     "@googleapis/sheets": "^13.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-checkbox": "^1.3.3",
