refactor: remove PDFs from repo, fetch certificate templates from CDN
- Upload certificate-template.pdf to Hetzner CDN
- Update generateCertificatePDF() to fetch template via fetchFromCdn()
- Update generateCertificatePreview() to fetch background via fetchFromCdn()
- Add certificate template path to CDN_ASSETS in cdn.ts
- Remove all 8 tracked PDFs (6 generated certs, 1 template, 1 unused offer letter)
- Add *.pdf and public/certificates/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,7 @@ landing-redesign/
 
 # old certificate template
 public/certificate-template.old.pdf
+
+# PDF files (certificates generated at runtime, templates on CDN)
+*.pdf
+public/certificates/
