--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@sendgrid/mail": "^8.1.6",
     "@tiptap/extension-image": "^3.15.3",
     "@tiptap/extension-link": "^3.15.3",
     "@tiptap/extension-placeholder": "^3.15.3",
@@ -49,7 +50,6 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-use-measure": "^2.1.7",
-    "resend": "^6.7.0",
     "schema-dts": "^1.1.5",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
