--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "schema-dts": "^1.1.5",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "validator": "^13.15.26",
     "zod": "^4.3.5"
   },
